--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 livekit-agents>=0.12.1
-livekit-plugins-openai>=0.10.9
+livekit-plugins-anthropic>=0.2.9
 livekit-plugins-cartesia>=0.4.5
 livekit-plugins-deepgram>=0.6.13
 livekit-plugins-silero>=0.7.4
